--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: bash -c "alembic upgrade head"
     container_name: "organization-app"
     ports:
       - 7765:8527
